opam-version: "2.0"
name: "sys-socket"
version: "0.1.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
homepage: "https://github.com/toots/ocaml-sys-socket"
authors: "Romain Beauxis <toots@rastageeks.org>"
bug-reports: "https://github.com/toots/ocaml-sys-socket/issues"
dev-repo: "git+https://github.com/toots/ocaml-sys-socket.git"
synopsis: "OCaml ctypes bindings to system-specific low-level socket structure and data-types."
license: "MIT"
depends: [
  "ocaml"
  "dune" {>= "1.10"}
  "ctypes"
]
build: ["dune" "build" "-p" name "-j" jobs]
