(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (name         sys_socket)
 (public_name  sys-socket)
 (synopsis    "sys-socket provides access to the features exposed in sys/socket.h")
 (c_names      sys_socket_generated_stubs)
 (libraries    unix ctypes sys-socket.types sys-socket.stubs))

(rule
 (targets sys_socket_generated_stubs.ml)
 (action  (run ./generator/gen_stubs.exe ml %{targets})))

(rule
 (targets sys_socket_generated_stubs.c)
 (action  (run ./generator/gen_stubs.exe c %{targets})))
