(env
  (dev
     (flags (:standard -warn-error -A))))

(library
 (name sys_socket_types)
 (public_name sys-socket.types)
 (libraries sys-socket.constants ctypes.stubs))

(rule
 (targets sys_socket_generated_constants.ml)
 (deps    (:gen ../generator/gen_constants_c))
 (action  (with-stdout-to %{targets} (run %{gen}))))
